# EMPainter

./: .gitignore  CMakeLists.txt
CMake/Modules/: MacOSXBundleInfo.plist.in
resources/: resources.qrc
resources/icon/: empainter.icns  empainter.rc
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paintarea.cpp  paintarea.h
